--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
     <uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
      
-
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
     <application
@@ -25,12 +24,17 @@
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="fddeb209ee08c26b40dc4f4766b67fa0" />
-        <activity android:name="com.amap.placesearch.MainActivity">
+
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".InputTipsActivity">
+
+
         </activity>
     </application>
 
