--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@
 .DS_Store
 /build
 /captures
+.idea/.name
+.idea/compiler.xml
+.idea/copyright/profiles_settings.xml
+.idea/encodings.xml
+.idea/gradle.xml
+.idea/modules.xml
+.idea/runConfigurations.xml
